confluent-schema-registry/1.0/modules/ROOT/pages/confluent-schema-registry-connector-reference.adoc
= Confluent Schema Registry Connector 1.0 Reference

Anypoint Connector for Confluent Schema Registry (Confluent Schema Registry Connector) enables
interaction with Confluent's Schema Registry to save and retrieve avro schemas to reduce
the size of an avro message while it transports through the network.

== Config


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<Config_BasicAuth, Basic Auth Connection Provider>>
* <<Config_Unsecured, Unsecured Connection Provider>>
 | Connection types for this configuration. | | x
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  1 |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  MINUTES |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER |How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  AUTO |
| Time to live a| Number | Time that a cached schema lives. |  0 |
| Time to live time unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
**MINUTES
** HOURS
** DAYS | Time unit for the *Time to live* field. |  SECONDS |
| Persist cache a| Boolean | Defines if the cache is persistent. |  true |
| Name a| String | ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
|===

== Connection Types

[[Config_BasicAuth]]
=== Basic Auth Connection Provider

Basic HTTP authentication supported by the API.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>. |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. |  |  |
| Connection Timeout a| Number | Timeout for establishing connections to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes. |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Idle Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Username a| String | Username to authenticate the requests. |  |
| Password a| String | Password to authenticate the requests. |  |
| Base Uri a| String | Parameter base URI. Each instance or tenant gets its own. |  |
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication.  |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | Configures a reconnection strategy to use when a connector operation fails to connect to an external server.  |  |
|===

[[Config_Unsecured]]
=== Unsecured Connection Provider

Unauthenticated.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Default Headers a| Array of <<DefaultHeader>>. |  |  |
| Query Parameters a| Array of <<DefaultQueryParam>>. |  |  |
| Connection Timeout a| Number | Timeout for establishing connections to the remote service. |  30 |
| Connection Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Timeout* field. |  SECONDS |
| Use Persistent Connections a| Boolean | Indicates whether to use persistent connections:

* `true`

Mule uses persistent connections.

* `false`

Mule closes the connection after the first request completes.  |  true |
| Max Connections a| Number | Maximum number of connections to open to the backend. HTTP requests are sent in parallel over multiple connections. Setting this value too high can impact latency and consume additional resources without increasing throughput. |  -1 |
| Connection Idle Timeout a| Number | When persistent connections are enabled, how long a connection can remain idle before Mule closes it. |  30 |
| Connection Idle Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Connection Idle Timeout* field. |  SECONDS |
| Proxy Config a| <<Proxy>> | Configures a proxy for outbound connections. |  |
| Stream Response a| Boolean | If this value is `true`, Mule streams received responses. |  false |
| Response Buffer Size a| Number | Size of the buffer that stores the HTTP response, in bytes. |  -1 |
| Base Uri a| String | Parameter base URI. Each instance or tenant gets its own. |  |
| Protocol a| Enumeration, one of:

** HTTP
** HTTPS | Protocol to use for communication.  |  HTTP |
| TLS Configuration a| <<Tls>> | Configures TLS. If using the HTTPS protocol, you must configure TLS. |  |
| Reconnection a| <<Reconnection>> | Configures a reconnection strategy to use when a connector operation fails to connect to an external server.  |  |
|===

== Operations

* <<CreateCompatibilitySubject>>
* <<DeleteSubject>>
* <<DeleteSubjectVersion>>
* <<GetGlobalCompatibilityLevel>>
* <<GetSchemaById>>
* <<GetSchemaForSubjectVersion>>
* <<GetSubjectByVersion>>
* <<GetSubjectConfig>>
* <<GetSubjectVersions>>
* <<GetSubjects>>
* <<IsSchemaRegistered>>
* <<RegisterSchemaForSubject>>
* <<ReplaceAvroSchemaWithId>>
* <<ReplaceIdWithAvroSchema>>
* <<UpdateGlobalConfig>>
* <<UpdateSubjectConfig>>


[[CreateCompatibilitySubject]]
== Create compatibility subject
`<confluent-schema-registry:create-compatibility-subject>`


Creates a compatibility subject. This operation makes an HTTP POST request to the /compatibility/subjects/{Subject}/versions/{Version} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Version a| String | Version number (or `latest`). |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[DeleteSubject]]
== Delete subject
`<confluent-schema-registry:delete-subject>`


Deletes all schema versions under the subject. This operation makes an HTTP DELETE request to the /subjects/{Subject} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Permanent a| Boolean | Determines whether to delete the subject permanently. |  false |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Number
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[DeleteSubjectVersion]]
== Delete subject version
`<confluent-schema-registry:delete-subject-version>`


Deletes a specific version of a subject. This operation makes an HTTP DELETE request to the /subjects/{Subject}/versions/{Version} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Version a| String | Version number. |  | x
| Permanent a| Boolean | Determines whether to delete the subject permanently. |  false |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetGlobalCompatibilityLevel]]
== Get global compatibility level
`<confluent-schema-registry:get-global-compatibility-level>`


Gets the top level config. This operation makes an HTTP GET request to the /config endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSchemaById]]
== Get schema by id
`<confluent-schema-registry:get-schema-by-id>`


Fetch a schema by a globally unique ID. This operation makes an HTTP GET request to the /schemas/ids/{Id} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Id a| String | Globally unique ID.|  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSchemaForSubjectVersion]]
== Get schema for subject version
`<confluent-schema-registry:get-schema-for-subject-version>`


Gets the avro schema for a specified version of the subject. Returns only the unescaped schema. This operation makes an HTTP GET request to the /subjects/{Subject}/versions/{Version}/schema endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Version a| String | Version number (or `latest`). |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSubjectByVersion]]
== Get subject by version
`<confluent-schema-registry:get-subject-by-version>`


Gets a specific version of the schema registered under the subject. This operation makes an HTTP GET request to the /subjects/{Subject}/versions/{Version} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Version a| String | Version number (or `latest`). |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSubjectConfig]]
== Get subject config
`<confluent-schema-registry:get-subject-config>`


Gets the subject config. This operation makes an HTTP GET request to the /config/{Subject} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSubjectVersions]]
== Get subject versions
`<confluent-schema-registry:get-subject-versions>`


Gets a list of versions registered under the specified subject. This operation makes an HTTP GET request to the /subjects/{Subject}/versions endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Number
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[GetSubjects]]
== Get Subjects
`<confluent-schema-registry:get-subjects>`


Lists all subjects. This operation makes an HTTP GET request to the /subjects endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  #[null] |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of String
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[IsSchemaRegistered]]
== Is schema registered
`<confluent-schema-registry:is-schema-registered>`


Checks if a schema is registered under the subject. This operation makes an HTTP POST request to the /subjects/{Subject} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[RegisterSchemaForSubject]]
== Register schema for subject
`<confluent-schema-registry:register-schema-for-subject>`


Registers a new schema under the specified subject. This operation makes an HTTP POST request to the /subjects/{Subject}/versions endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[ReplaceAvroSchemaWithId]]
== Replace AVRO schema with id
`<confluent-schema-registry:replace-avro-schema-with-id>`


Replaces an avro schema with a schema ID. This operation replaces the schema in an avro message with an ID from Confluent Schema Registry.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Message a| Any | Avro serialized message that contains the schema ID. |  #[payload] |
| Schema ID a| Number | Schema used to replace the schema ID in the deserialized message. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INCOMPATIBLE_SCHEMA
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:INVALID_AVRO_MESSAGE
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[ReplaceIdWithAvroSchema]]
== Replace Id With AVRO Schema
`<confluent-schema-registry:replace-id-with-avro-schema>`

Replaces an ID with an avro schema.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Message a| Any | Avro serialized message that contains the schema ID. |  #[payload] |
| Schema a| String | Schema used to replace the schema ID in the deserialized message. |  |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INCOMPATIBLE_SCHEMA
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:INVALID_AVRO_MESSAGE
* CONFLUENT-SCHEMA-REGISTRY:INVALID_SCHEMA
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[UpdateGlobalConfig]]
== Update global config
`<confluent-schema-registry:update-global-config>`


Updates the global config. This operation makes an HTTP PUT request to the /config endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED


[[UpdateSubjectConfig]]
== Update subject config
`<confluent-schema-registry:update-subject-config>`


Updates the subject config. This operation makes an HTTP PUT request to the /config/{Subject} endpoint.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Subject a| String | Name of the subject. |  | x
| Body a| Any | Content to use. |  #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration used to execute this component. |  |
| Streaming Strategy a| * <<RepeatableInMemoryStream>>
* <<RepeatableFileStoreStream>>
* non-repeatable-stream | Configures how Mule processes streams. The default is to use repeatable streams. |  |
| Custom Query Parameters a| Object | Custom query parameters to include in the request. The specified query parameters are merged with the default query parameters that are specified in the configuration. |  |
| Custom Headers a| Object | Custom headers to include in the request. The specified custom headers are merged with the default headers that are specified in the configuration. |  |
| Response Timeout a| Number | How long Mule waits for a response to complete before the response times out. |  |
| Response Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Response Timeout* field. |  |
| Streaming Type a| Enumeration, one of:

** AUTO
** ALWAYS
** NEVER | How the connector streams request content to the remote service:

* `AUTO` (default)

Connector automatically uses the best streaming strategy based on the request content.

* `ALWAYS`

Connector always streams the request content.

* `NEVER`

Connector does not stream the request content. |  |
| Target Variable a| String | Name of the variable that stores the operation's output. |  |
| Target Value a| String | Expression that evaluates the operation's output. The expression outcome is stored in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<HttpResponseAttributes>>
|===

=== For Configurations

* <<Config>>

=== Throws

* CONFLUENT-SCHEMA-REGISTRY:BAD_REQUEST
* CONFLUENT-SCHEMA-REGISTRY:CLIENT_ERROR
* CONFLUENT-SCHEMA-REGISTRY:CONNECTIVITY
* CONFLUENT-SCHEMA-REGISTRY:INTERNAL_SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:NOT_FOUND
* CONFLUENT-SCHEMA-REGISTRY:RETRY_EXHAUSTED
* CONFLUENT-SCHEMA-REGISTRY:SERVER_ERROR
* CONFLUENT-SCHEMA-REGISTRY:TIMEOUT
* CONFLUENT-SCHEMA-REGISTRY:UNAUTHORIZED



== Types
[[DefaultHeader]]
=== Default Header

Headers automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[DefaultQueryParam]]
=== Default Query Param

Query parameters automatically added to every outbound request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key a| String | Key for this type. |  | x
| Value a| String | Value for this type. |  | x
|===

[[Proxy]]
=== Proxy

Configures the settings used to connect through a proxy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Hostname or IP address of the proxy server. |  | x
| Port a| Number | Port of the proxy server. |  | x
| Username a| String | Username to authenticate against the proxy server. |  |
| Password a| String | Password to authenticate against the proxy server. |  |
| Non Proxy Hosts a| String |  |  |
|===

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures how to validate certificates. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of truststore. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system, if possible. |  |
| Type a| String | Type of store used. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method)  to check certificate validity.

* `false`

Do not use the secondary method to check certificate validity. |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. | Path to the CRL file. |
|===

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | What to do if, when an app is deployed, a connectivity test does not pass after exhausting the associated reconnection strategy:

* `true`

Allow the deployment to fail.

* `false`

Ignore the results of the connectivity test. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector operation source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often the Mule app attempts to reconnect to the remote service or API, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy will run in a separate, non-blocking thread. |  |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[HttpResponseAttributes]]
=== HTTP Response Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number |  |  | x
| Headers a| Object |  |  | x
| Reason Phrase a| String |  |  | x
|===

[[RepeatableInMemoryStream]]
=== Repeatable In Memory Stream

Configures the in-memory streaming strategy by which the request fails if the data exceeds the buffer size. Always run performance tests to find the optimal buffer size for your specific use case.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Initial amount of memory to allocate to the memory stream. If the stream data exceeds this value, the buffer expands by *Buffer Size Increment*, with an upper limit of *Max In Memory Size value*. |  |
| Buffer Size Increment a| Number | Amount by which the buffer size expands if it exceeds its initial size. Setting a value of `0` or lower specifies that the buffer can't expand. |  |
| Max Buffer Size a| Number | Maximum size of the buffer. If the buffer size exceeds this value, Mule raises a `STREAM_MAXIMUM_SIZE_EXCEEDED` error. A value of less than or equal to `0` means no limit. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *Initial Buffer Size*, *Buffer Size Increment*, and *Buffer Unit* fields. |  |
|===

[[RepeatableFileStoreStream]]
=== Repeatable File Store Stream

Configures the repeatable file-store streaming strategy by which Mule keeps a portion of the stream content in memory. If the stream content is larger than the configured buffer size, Mule backs up the buffer’s content to disk and then clears the memory.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Size a| Number | Maximum amount of memory that the stream can use for data. If the amount of memory exceeds this value, Mule buffers the content to disk. To optimize performance:

* Configure a larger buffer size to avoid the number of times Mule needs to write the buffer on disk. This increases performance, but it also limits the number of concurrent requests your application can process, because it requires additional memory.

* Configure a smaller buffer size to decrease memory load at the expense of response time. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit for the *In Memory Size* field. |  |
|===

== See Also

* xref:index.adoc[Confluent Schema Registry Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]
